corrected .card a text align from canter to center after using w3c css validator

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ nav a:hover {
 }
 
 .card a {
-    text-align: canter;
+    text-align: center;
 }
 
 img {
